--- a/sections/category-navigation.liquid
+++ b/sections/category-navigation.liquid
@@ -265,7 +265,7 @@
   "blocks": [
     {
       "name": "Category Navigation App",
-      "type": "@category-navigation-app"
+      "type": "Benefit"
     }
   ],
   "presets": [
