--- a/sections/category-navigation.liquid
+++ b/sections/category-navigation.liquid
@@ -258,20 +258,20 @@
 
 {% schema %}
 {
-  "name": "Category navigation",
-  "tag": "section",
-  "class": "",
-  "settings": [],
-  "blocks": [
-    {
-      "name": "Category Navigation App",
-      "type": "Benefit"
-    }
-  ],
-  "presets": [
-    {
-      "name": "Default Settings"
-    }
-  ]
-}
+    "name": "Category navigation",
+    "tag": "section",
+    "class": "category-navigation",
+    "settings": [],
+    "blocks": [
+      {
+        "name": "",
+        "type": "@app"
+      }
+    ],
+    "presets": [
+      {
+        "name": "Default Settings"
+      }
+    ]
+  }
 {% endschema %}
