--- a/sections/category-navigation.liquid
+++ b/sections/category-navigation.liquid
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="{{ 'css-reset.css' | asset_url | stylesheet_tag }}">
-<link rel="stylesheet" href="{{ 'base-custom.css' | asset_url | stylesheet_tag }}">
-<link rel="stylesheet" href="{{ 'components.css' | asset_url | stylesheet_tag }}">
-<link rel="stylesheet" href="{{ 'category-navigation.css' | asset_url | stylesheet_tag }}">
-<link rel="stylesheet" href="{{ 'breadcrumbs.css' | asset_url | stylesheet_tag }}">
+{{ 'css-reset.css' | asset_url }}
+{{ 'base-custom.css' | asset_url }}
+{{ 'components.css' | asset_url }}
+{{ 'category-navigation.css' | asset_url }}
+{{ 'breadcrumbs.css' | asset_url }}
 
 <div class="category_navigation">
   <div class="container">
