--- a/sections/category-navigation.liquid
+++ b/sections/category-navigation.liquid
@@ -5,7 +5,7 @@
 {{ 'breadcrumbs.css' | asset_url | stylesheet_tag }}
 
 <div class="category_navigation">
-  <div class="container">
+  <div class="">
     <div class="header_section">
       <ul class="breadcrumbs">
         <li><a href="#">Головна</a></li>
