--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -52,7 +52,7 @@
                         selected="selected"
                       {% endif %}
                     >
-                      D
+                      {{ option.name | escape }}
                     </option>
                   {%- endfor -%}
                 </select>
