--- a/assets/colection-filters.css
+++ b/assets/colection-filters.css
@@ -318,6 +318,9 @@ ul {
     margin: 117px auto 0 auto;
     padding: 12px 30px;
   }
+  .category_navigation {
+    margin-top: 19px;
+  }
 }
 
 @media screen and (min-width: 1400px) {
