--- a/snippets/card-product-new.liquid
+++ b/snippets/card-product-new.liquid
@@ -9,13 +9,11 @@
   <article class="favorite-card">
     <a
       href="#"
-      class="iWishAddColl iWishAdd_card"
+      class="iWishAddColl button_add_wishlist iWishAdd_card"
       data-product="{{ card_product.id }}"
       data-variant="{{ card_product.selected_or_first_available_variant.id }}"
     >
       <svg
-        height="25px"
-        width="25px"
         viewBox="0 0 22 20"
         fill="none"
         class="icon"
