--- a/assets/base.css
+++ b/assets/base.css
@@ -2495,7 +2495,7 @@ product-info .loading__spinner:not(.hidden) ~ *,
 
 .header__heading-link {
   display: inline-block;
-  padding: 0.75rem;
+  padding: 0.75rem 0;
   text-decoration: none;
   word-break: break-word;
 }
