--- a/assets/components.css
+++ b/assets/components.css
@@ -12,6 +12,7 @@
   padding: 10px 0px;
   background-color: transparent;
   color: #000000;
+  /* line-height: 0px; */
   cursor: pointer;
   text-align: center;
   transition: all 0.4s ease;
