--- a/snippets/card-product-new.liquid
+++ b/snippets/card-product-new.liquid
@@ -7,6 +7,7 @@
 
 {%- if card_product and card_product != empty -%}
   <article class="favorite-card">
+    <a href="{{ card_product.url }}" class="link"></a>
     <a
       href="#"
       class="iWishAddColl button_add_wishlist iWishAdd_card"
