section product info

--- a/sections/product-info.liquid
+++ b/sections/product-info.liquid
@@ -204,7 +204,7 @@
 
 {% schema %}
 {
-  "name": "Colection filters",
+  "name": "Product info",
   "tag": "section",
   "class": "section",
   "settings": [],
@@ -215,7 +215,7 @@
   ],
   "presets": [
     {
-      "name": "Colection filters"
+      "name": "Product info"
     }
   ]
 }
