--- a/sections/product-info.liquid
+++ b/sections/product-info.liquid
@@ -1,3 +1,6 @@
+{{ 'accordion.css' | asset_url | stylesheet_tag -}}
+{{ 'product-info.css' | asset_url | stylesheet_tag }}
+
 <section class="catalogue-card">
   <div class="container">
     <div class="flex-container">
@@ -201,6 +204,10 @@
     </div>
   </div>
 </section>
+
+  <script src="{{ 'accordion.js' | asset_url }}" defer="defer"></script>
+  <script src="{{ 'product-info-new.js' | asset_url }}" defer="defer"></script>
+
 
 {% schema %}
 {
